Finalized the CSS on all pages and fixed line-heights and made it text/images more readable and visible.

--- a/css/about.css
+++ b/css/about.css
@@ -46,16 +46,38 @@ h2 {
 
 p {
     font-family: 'karlaregular', Arial, Helvetica, sans-serif;
-    font-size: 1.2em;
-    margin: auto;
-    padding: auto;
+    font-size: 1.1em;
+    margin: 10px;
+    padding-bottom: 25px;
     line-height: 1.4em;
+}
+
+.ux-skills {
+    font-family: 'latobold', Arial, Helvetica, sans-serif;
+    font-size: 1.2em;
+    margin: 10px;
+    padding: 10px;
+}
+
+.software-skills {
+    font-family: 'latobold', Arial, Helvetica, sans-serif;
+    font-size: 1.2em;
+    margin: 10px;
+    padding: 10px;
+}
+
+ul {
+    font-family: 'karlaregular', Arial, Helvetica, sans-serif;
+    font-size: 1.1em;
+    margin: 10px;
+    padding: auto;
+    line-height: 25px;
 }
 
 /* Back to Top Button */
 btt {
     display: block;
     position: absolute;
-    bottom: -100%;
+    bottom: -90%;
     right: 5%;
 }
