--- a/css/style.css
+++ b/css/style.css
@@ -167,6 +167,30 @@ body {
     padding: 0.875em 1.75em;
 }
 
+/* Navigation Bar */
+.navbar {
+    overflow: hidden;
+    background-color: rgb(22, 22, 22);
+}
+
+.navbar a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 0.875em 1em;
+    text-decoration: none;
+    font-size: 0.85em;
+}
+
+.navbar a:hover {
+    background-color: #ddd;
+    color: black;
+}
+  
+.navbar a.active {
+    background-color: #DFB000;
+    color: white;
+}
 
 /* Mouse Hover */
 .btn:hover {background: rgb(0, 0, 0);}
